modules/jenkins/securitygroups.tf
resource "aws_security_group" "jenkins_sg" {
  name = "Jnkns_SecGr"

  # Global Web access to Jenkins 
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Global access to Jenkins"
  }

  # SSH access to Jenkins from Public Subnet
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = "${var.public_subnets_cidr}"
    description = "SSH access to Jenkins from Public Subnet"
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "outbound internet access"
  }

  vpc_id = "${var.vpc_id}"
}

resource "aws_security_group" "jnkns_nat_sg" {
  name = "jnkns_nat_SecGr"

  # Allow ssh to jenkins via SSH
  egress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${aws_instance.jenkins.private_ip}/32"]
    description = "Allow ssh to jenkins via SSH"
  }

  vpc_id = "${var.vpc_id}"
}

resource "aws_network_interface_sg_attachment" "sg_attachment" {
  security_group_id    = "${aws_security_group.jnkns_nat_sg.id}"
  network_interface_id = "${var.nat_gateway_interface_id}"
}
